[package]
name = "dbapicalls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.0", features = ["full"] }
futures = "0.3.17"
mongodb = "2.2.1"
reqwest = { version = "0.11.5", features = ["blocking", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
bson = "2.0.0"